[tool.poetry]
name = "autoencoder"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <afoley@getsporttrade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
keras = "^2.14.0"
pandas = "^2.1.2"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
tensorflow = "^2.14.0"
tensorflow-macos = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
